objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Ad_Size__c</fullName>
        <inlineHelpText>Price will only be updated when you change Ad Size</inlineHelpText>
        <label>Ad Size</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1/2 Page Classified</fullName>
                </value>
                <value>
                    <fullName>1/2 Page Horizontal</fullName>
                </value>
                <value>
                    <fullName>1/2 Page Vertical</fullName>
                </value>
                <value>
                    <fullName>1/3 DPS under Financial Indicators</fullName>
                </value>
                <value>
                    <fullName>1/3 page horizontal</fullName>
                </value>
                <value>
                    <fullName>1/3 Page under Financial Indicators</fullName>
                </value>
                <value>
                    <fullName>1/3 Page Vertical</fullName>
                </value>
                <value>
                    <fullName>1/3rd page Classified</fullName>
                </value>
                <value>
                    <fullName>1/4 Page</fullName>
                </value>
                <value>
                    <fullName>1/4 page Classified</fullName>
                </value>
                <value>
                    <fullName>1/4 page in Letters</fullName>
                </value>
                <value>
                    <fullName>3/4 page in Letters</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Horizontal</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Horizontal Appointments</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Horizontal Courses</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Horizontal Executive Focus</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Horizontal Property</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Horizontal Tenders</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Vertical</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Vertical Appointments</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Vertical Courses</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Vertical Executive Focus</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Vertical Property</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/2 Page Vertical Tenders</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/4 Page</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/4 Page Appointments</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/4 Page Courses</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/4 Page Executive Focus</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/4 Page Property</fullName>
                </value>
                <value>
                    <fullName>4Colour 1/4 Page Tenders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4 Color</fullName>
                </value>
                <value>
                    <fullName>2 Color</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Combined_Audience__c</fullName>
        <label>Combined Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_IO__c</fullName>
        <label>Discount IO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMB_Discount__c</fullName>
        <formula>IF(Print_IO__c, VALUE(Discount_IO__c)/10000, IF(Discount__c &gt;= 0, Discount__c/100, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <label>Edition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Africa</label>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>Asia</label>
                </value>
                <value>
                    <fullName>AP</fullName>
                    <label>Asia-Pacific</label>
                </value>
                <value>
                    <fullName>APNA</fullName>
                    <label>Asia Pacific &amp; North America</label>
                </value>
                <value>
                    <fullName>AUS</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>BRA</fullName>
                    <label>Brazil</label>
                </value>
                <value>
                    <fullName>CAN</fullName>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>CEU</fullName>
                    <label>Continental Europe</label>
                </value>
                <value>
                    <fullName>EC</fullName>
                    <label>East Coast</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>CMEA</fullName>
                    <label>EUR / MEA</label>
                </value>
                <value>
                    <fullName>EUFC</fullName>
                    <label>Financial Centres Continental Europe</label>
                </value>
                <value>
                    <fullName>HK</fullName>
                    <label>Hong Kong</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <label>Latin America</label>
                </value>
                <value>
                    <fullName>LON</fullName>
                    <label>London</label>
                </value>
                <value>
                    <fullName>MEA</fullName>
                    <label>M.East &amp; Africa</label>
                </value>
                <value>
                    <fullName>MAS</fullName>
                    <label>Malaysia</label>
                </value>
                <value>
                    <fullName>MEX</fullName>
                    <label>Mexico</label>
                </value>
                <value>
                    <fullName>MEO</fullName>
                    <label>Middle East</label>
                </value>
                <value>
                    <fullName>MW</fullName>
                    <label>Mid West</label>
                </value>
                <value>
                    <fullName>NALA</fullName>
                    <label>North &amp; Latin America</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>PAC</fullName>
                    <label>Pacific</label>
                </value>
                <value>
                    <fullName>SGP</fullName>
                    <label>Singapore</label>
                </value>
                <value>
                    <fullName>SA</fullName>
                    <label>South Asia</label>
                </value>
                <value>
                    <fullName>EUTH</fullName>
                    <label>Travel Hubs Continental Europe</label>
                </value>
                <value>
                    <fullName>UANA</fullName>
                    <label>UK/Asia Pacific/North America</label>
                </value>
                <value>
                    <fullName>UENA</fullName>
                    <label>UK / Europe / North America</label>
                </value>
                <value>
                    <fullName>UE</fullName>
                    <label>UK &amp; Europe</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>For I/O Editing Purposes only.</description>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Publication__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Classified Display The Economist</fullName>
                    <label>Classified Digital</label>
                </value>
                <value>
                    <fullName>Classified Print The Economist</fullName>
                    <label>Classified Print</label>
                </value>
                <value>
                    <fullName>Classified In Display</fullName>
                </value>
                <value>
                    <fullName>Display The Economist</fullName>
                    <label>Digital</label>
                </value>
                <value>
                    <fullName>Display 1843</fullName>
                    <label>Digital 1843</label>
                </value>
                <value>
                    <fullName>Display Espresso</fullName>
                    <label>Digital Espresso</label>
                </value>
                <value>
                    <fullName>Display GBR</fullName>
                    <label>Digital GBR</label>
                </value>
                <value>
                    <fullName>Display World In</fullName>
                    <label>Digital World In</label>
                </value>
                <value>
                    <fullName>Films</fullName>
                </value>
                <value>
                    <fullName>Print The Economist</fullName>
                    <label>Print</label>
                </value>
                <value>
                    <fullName>Print 1843</fullName>
                </value>
                <value>
                    <fullName>Print 1843 Supplement</fullName>
                    <label>Print Supplement</label>
                </value>
                <value>
                    <fullName>Print World In</fullName>
                </value>
                <value>
                    <fullName>Product Charges</fullName>
                </value>
                <value>
                    <fullName>Classified In Display The Economist</fullName>
                </value>
                <value>
                    <fullName>Classified In Display</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_IO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print IO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1843</fullName>
                </value>
                <value>
                    <fullName>1843 Supplement</fullName>
                </value>
                <value>
                    <fullName>Economist Films</fullName>
                </value>
                <value>
                    <fullName>Espresso</fullName>
                </value>
                <value>
                    <fullName>GBR</fullName>
                </value>
                <value>
                    <fullName>The Economist Digital Editions</fullName>
                </value>
                <value>
                    <fullName>The Economist Newspaper</fullName>
                </value>
                <value>
                    <fullName>The World In</fullName>
                </value>
                <value>
                    <fullName>The Economist Classified</fullName>
                    <isActive>false</isActive>
                    <label>The Economist Classified</label>
                </value>
                <value>
                    <fullName>The Economist Digital Editions Classified</fullName>
                    <isActive>false</isActive>
                    <label>The Economist Digital Editions Classified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Sequence__c</fullName>
        <description>https://jira.economist.com/browse/BET-625
This field generates Opportunity Line Item Sequence for Each Line Item in a Format of 000.</description>
        <label>Order Sequence</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Gauranted__c</fullName>
        <label>Requested / Guaranteed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Guaranteed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevSchId__c</fullName>
        <description>For Edit I/O Purposes only.</description>
        <label>RevSchId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Ad Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Special Report</fullName>
                </value>
                <value>
                    <fullName>Classified</fullName>
                </value>
                <value>
                    <fullName>Product Charges</fullName>
                </value>
                <value>
                    <fullName>Promo Opportunity</fullName>
                </value>
                <value>
                    <fullName>The World If</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Audio Edition</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <inlineHelpText>Please ensure Discount is set to Zero &quot;0&quot;, if you are updating Price.</inlineHelpText>
        <label>Price</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>